--- a/src/app/_portal/partials/layout/splash-screen/splash-screen.component.html
+++ b/src/app/_portal/partials/layout/splash-screen/splash-screen.component.html
@@ -3,7 +3,7 @@
   <img src="https://www.eosc-life.eu/wp-content/themes/eosc-life-v2/assets/images/eosclogo.png" alt="Logo"
        style="width: 115px; height: 100px;"
   />
-  <h2>Toolbox for sensitive data objects</h2>
+  <h2>The Toolbox for Sensitive Data Objects</h2>
   <svg class="splash-spinner" viewBox="0 0 50 50">
     <circle
       class="path"
