--- a/src/app/pages/_layout/components/header/header-menu/header-menu.component.html
+++ b/src/app/pages/_layout/components/header/header-menu/header-menu.component.html
@@ -4,7 +4,7 @@
     margin-bottom: -0.5px !important;
     margin-top: 3px;"
   >
-    Toolbox for sensitive data objects
+    TSDO
   </h2>
 
   <span style="color: #eb675e !important; font-weight: 900 !important; margin-left: 1px !important;">
