--- a/src/app/pages/resource-page/resource-page.component.html
+++ b/src/app/pages/resource-page/resource-page.component.html
@@ -147,6 +147,53 @@
 
                     <mat-divider></mat-divider>
 
+
+                    <div class="row mt-1" style="margin-bottom: -10px !important;">
+                        <div class="col-3 justify-content-center text-center">
+                            <h6 style="margin-top: 2px !important;">Sensitive data</h6>
+                        </div>
+                        <div class="col-9">
+                            <p align="justify" style="margin-top: 3px !important;">
+                                <ng-container
+                                        *ngIf="resource.tags.sensitive_data !== null
+                  && resource.tags.sensitive_data !== undefined; else noneTemplate"
+                                >
+                                    <ng-container *ngIf="resource.tags.sensitive_data.length > 0;
+                    else noneTemplate">
+
+                                        <ng-container *ngIf="resource.tags.sensitive_data.length === 1">
+                      <span *ngFor="let sensitive_d of resource.tags.sensitive_data">
+                      {{sensitive_d.name}}
+                          <i class="fa fa-question-circle"
+                             ngbPopover="{{sensitive_d.description}}"
+                             placement="auto"
+                             popoverTitle="{{sensitive_d.name}}"
+                          >
+                        </i>
+                      </span>
+                                        </ng-container>
+
+                                        <ng-container *ngIf="resource.tags.sensitive_data.length > 1">
+                      <span *ngFor="let sensitive_d of resource.tags.sensitive_data">
+                      {{sensitive_d.name}}
+                          <i class="fa fa-question-circle"
+                             ngbPopover="{{sensitive_d.description}}"
+                             placement="auto"
+                             popoverTitle="{{sensitive_d.name}}"
+                          >
+                        </i> ;
+                      </span>
+                                        </ng-container>
+
+                                    </ng-container>
+                                </ng-container>
+                            </p>
+                        </div>
+                    </div>
+
+                    <mat-divider></mat-divider>
+
+
                     <div class="row mt-1" style="margin-bottom: -10px !important;">
                         <div class="col-3 justify-content-center text-center">
                             <h6 style="margin-top: 2px !important;">Resource types</h6>
